src/test/ui/borrowck/borrowck-break-uninit-2.stderr
error[E0381]: binding `x` isn't initialized
  --> $DIR/borrowck-break-uninit-2.rs:9:20
   |
LL |     let x: isize;
   |         - variable declared here
...
LL |     println!("{}", x);
   |                    ^ `x` borrowed here but it isn't initialized
   |
   = note: this error originates in the macro `$crate::format_args_nl` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0381`.
